# aos

./: Cargo.toml  Makefile
doc/: libinput_raw_keycodes.txt
src/: dsh.rs  ffs.rs  main.rs  ribbit.rs  vga_buffer.rs
src/libinput/: decode.rs  mod.rs
