[package]
name = "aos"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
ps2 = "0.2.0"
arrform = "0.1.1"
heapless = "0.7.15"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "compiler_builtins"]
